feat: add current environment prompt context